tests/neg/java-fake-ann/FakeAnn.java
interface FakeAnn extends java.lang.annotation.Annotation { }
